--- a/Client/twiths_/Base.lproj/Main.storyboard
+++ b/Client/twiths_/Base.lproj/Main.storyboard
@@ -264,66 +264,75 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lpv-oI-l1u">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lpv-oI-l1u">
                                 <rect key="frame" x="80" y="185" width="216" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="216" id="8Xr-ZT-eL6"/>
+                                </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zAS-dW-AqT">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zAS-dW-AqT">
                                 <rect key="frame" x="80" y="272" width="216" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iO1-gn-kRq">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iO1-gn-kRq">
                                 <rect key="frame" x="80" y="367" width="216" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="이메일" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sL5-vP-kDm">
-                                <rect key="frame" x="80" y="156" width="45" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이메일" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sL5-vP-kDm">
+                                <rect key="frame" x="165" y="156" width="45" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="45" id="8CT-bA-9Jc"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="비밀번호" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mdU-sG-pjP">
-                                <rect key="frame" x="80" y="243" width="59" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="비밀번호" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mdU-sG-pjP">
+                                <rect key="frame" x="158" y="243" width="59" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="59" id="S4q-MK-eqg"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="이름" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t6c-JQ-PIS">
-                                <rect key="frame" x="80" y="338" width="30" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이름" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t6c-JQ-PIS">
+                                <rect key="frame" x="172.5" y="338" width="30" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="ZNp-gJ-2Ww"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="회원가입" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GpT-L2-Pg7">
-                                <rect key="frame" x="124" y="81" width="129" height="45"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="회원가입" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GpT-L2-Pg7">
+                                <rect key="frame" x="123" y="81" width="129" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="129" id="6NM-We-R1M"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="37"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xMd-zK-dsl">
-                                <rect key="frame" x="159" y="447" width="73" height="61"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xMd-zK-dsl">
+                                <rect key="frame" x="96" y="478" width="183" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="183" id="euu-hy-P0L"/>
+                                </constraints>
                                 <state key="normal" title="등록"/>
                                 <connections>
                                     <action selector="SignupButtonClicked:" destination="TPV-fK-hzL" eventType="touchUpInside" id="Zqu-lC-Eob"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bxp-FD-ASA">
-                                <rect key="frame" x="159" y="576" width="73" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bxp-FD-ASA">
+                                <rect key="frame" x="96" y="576" width="183" height="30"/>
                                 <state key="normal" title="취소"/>
                                 <connections>
                                     <segue destination="wAr-r5-UCX" kind="show" id="KGp-0x-tqN"/>
@@ -331,6 +340,29 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="iO1-gn-kRq" firstAttribute="width" secondItem="zAS-dW-AqT" secondAttribute="width" id="ADJ-ky-9D1"/>
+                            <constraint firstItem="Bxp-FD-ASA" firstAttribute="width" secondItem="xMd-zK-dsl" secondAttribute="width" id="Awg-Ni-xgR"/>
+                            <constraint firstItem="GpT-L2-Pg7" firstAttribute="top" secondItem="4oE-dT-oh6" secondAttribute="top" constant="61" id="CVM-aO-i42"/>
+                            <constraint firstItem="t6c-JQ-PIS" firstAttribute="top" secondItem="zAS-dW-AqT" secondAttribute="bottom" constant="36" id="Che-9v-f2A"/>
+                            <constraint firstItem="iO1-gn-kRq" firstAttribute="top" secondItem="t6c-JQ-PIS" secondAttribute="bottom" constant="8" id="F9B-8U-znN"/>
+                            <constraint firstItem="sL5-vP-kDm" firstAttribute="top" secondItem="GpT-L2-Pg7" secondAttribute="bottom" constant="30" id="HcV-uu-a8b"/>
+                            <constraint firstItem="iO1-gn-kRq" firstAttribute="centerX" secondItem="cru-54-FTJ" secondAttribute="centerX" id="Kbu-EG-OKM"/>
+                            <constraint firstItem="Lpv-oI-l1u" firstAttribute="centerX" secondItem="cru-54-FTJ" secondAttribute="centerX" id="Khn-l6-iO9"/>
+                            <constraint firstItem="GpT-L2-Pg7" firstAttribute="centerX" secondItem="cru-54-FTJ" secondAttribute="centerX" id="Ns1-J2-wpU"/>
+                            <constraint firstItem="mdU-sG-pjP" firstAttribute="centerX" secondItem="cru-54-FTJ" secondAttribute="centerX" id="Opr-VI-k3Q"/>
+                            <constraint firstItem="zAS-dW-AqT" firstAttribute="width" secondItem="Lpv-oI-l1u" secondAttribute="width" id="UKs-vW-3JT"/>
+                            <constraint firstItem="Bxp-FD-ASA" firstAttribute="top" secondItem="xMd-zK-dsl" secondAttribute="bottom" constant="68" id="X9y-8Y-9Tw"/>
+                            <constraint firstItem="mdU-sG-pjP" firstAttribute="top" secondItem="Lpv-oI-l1u" secondAttribute="bottom" constant="28" id="XZV-Wu-94m"/>
+                            <constraint firstItem="zAS-dW-AqT" firstAttribute="centerX" secondItem="cru-54-FTJ" secondAttribute="centerX" id="eKY-Gd-0As"/>
+                            <constraint firstItem="zAS-dW-AqT" firstAttribute="top" secondItem="mdU-sG-pjP" secondAttribute="bottom" constant="8" id="ewK-ia-TJD"/>
+                            <constraint firstItem="Lpv-oI-l1u" firstAttribute="top" secondItem="sL5-vP-kDm" secondAttribute="bottom" constant="8" id="pQ8-JD-H9E"/>
+                            <constraint firstItem="4oE-dT-oh6" firstAttribute="bottom" secondItem="Bxp-FD-ASA" secondAttribute="bottom" constant="61" id="pa1-Wy-lrh"/>
+                            <constraint firstItem="xMd-zK-dsl" firstAttribute="centerX" secondItem="cru-54-FTJ" secondAttribute="centerX" id="qq2-RD-qat"/>
+                            <constraint firstItem="sL5-vP-kDm" firstAttribute="centerX" secondItem="cru-54-FTJ" secondAttribute="centerX" id="xTy-kX-Vjp"/>
+                            <constraint firstItem="t6c-JQ-PIS" firstAttribute="centerX" secondItem="cru-54-FTJ" secondAttribute="centerX" id="yox-ZB-aHf"/>
+                            <constraint firstItem="Bxp-FD-ASA" firstAttribute="centerX" secondItem="cru-54-FTJ" secondAttribute="centerX" id="z1S-Za-AfJ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="4oE-dT-oh6"/>
                     </view>
                     <connections>
@@ -341,7 +373,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GZC-yw-zge" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2458" y="-27"/>
+            <point key="canvasLocation" x="-2458.4000000000001" y="-27.436281859070466"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="AB1-mb-Qma">
